--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,26 +25,33 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="left">
 
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Capture"
-                android:id="@+id/capture" />
+                android:id="@+id/capture"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@color/colorPrimary"
+                android:textColor="#ffffff"/>
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="15dp">
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Scan Barcode"
                 android:id="@+id/scan"
-                android:layout_weight="2"/>
+                android:layout_weight="2"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@color/colorPrimary"
+                android:textColor="#ffffff"/>
 
             <TextView
                 android:layout_width="0dp"
