v 1.07 แต่งไอคอน โลโก้ สี ให้กับ navigator drawer

--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -59,7 +59,8 @@
                 android:id="@+id/textView"
                 android:text="XXX"
                 android:gravity="center"
-                android:layout_weight="3"/>
+                android:layout_weight="3"
+                android:freezesText="true"/>
 
         </LinearLayout>
 
