--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -67,6 +67,16 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></LinearLayout>
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/textView2"
+                android:text="XXX"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:freezesText="true"
+                android:textSize="20sp"/>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
