--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -62,11 +62,23 @@
                 android:layout_weight="3"
                 android:freezesText="true"/>
 
+
         </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></LinearLayout>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/textView2"
+                android:text="XXX"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:freezesText="true"
+                android:textSize="20sp"/>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
