--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#ab0f5d"
+        android:centerColor="@color/colorAccent"
         android:endColor="#7a002d"
-        android:startColor="#a62d59"
+        android:startColor="@color/colorAccentTemp"
         android:type="linear" />
 </shape>
