--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,4 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.administrator.myapplication.TestActivity">
 
-</RelativeLayout>
+    <requestFocus android:layout_gravity="center" />
+
+    <requestFocus android:layout_gravity="left|center_vertical" />
+
+</FrameLayout>
