--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -9,13 +9,25 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="256dp"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true">
+
+            <ImageView
+                android:id="@+id/backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+
+                app:layout_collapseMode="parallax" />
             <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
 
             <android.support.v7.widget.Toolbar
@@ -24,74 +36,63 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:minHeight="?attr/actionBarSize"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                android:gravity="top">
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="6">
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:orientation="horizontal"-->
+                    <!--android:weightSum="6"-->
+                    <!--android:id="@+id/topLL">-->
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_weight="4"/>
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:orientation="horizontal"-->
+                        <!--android:layout_weight="4"/>-->
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_weight="2"
-                        android:gravity="center|right"
-                        android:paddingRight="13dp">
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:orientation="horizontal"-->
+                        <!--android:layout_weight="2"-->
+                        <!--android:gravity="center|right"-->
+                        <!--android:paddingRight="13dp">-->
 
-                        <!--<Button-->
+                        <!--<ImageButton-->
                             <!--android:layout_width="wrap_content"-->
                             <!--android:layout_height="wrap_content"-->
-                            <!--android:text="XXX"-->
-                            <!--android:visibility="visible"/>-->
+                            <!--android:id="@+id/backPressed"-->
+                            <!--android:src="@drawable/ic_menu_send"-->
+                            <!--android:background="#00000000"-->
+                            <!--android:visibility="invisible"-->
+                            <!--android:theme="@style/AppTheme.AppBarOverlay"-->
+                            <!--/>-->
+                    <!--</LinearLayout>-->
 
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/backPressed"
-                            android:src="@drawable/places_ic_clear"
-                            android:background="#00000000"
-                            android:visibility="invisible"
-                            android:theme="@style/AppTheme.AppBarOverlay"
-                            />
-                    </LinearLayout>
+                <!--</LinearLayout>-->
 
-                </LinearLayout>
-
-            </android.support.v7.widget.Toolbar>
+            <!--</android.support.v7.widget.Toolbar>-->
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
-    <!--<android.support.v4.widget.NestedScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:fillViewport="true"-->
-        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-
-        <!--<include layout="@layout/content_main" />-->
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/content"></FrameLayout>
-
-    <!--</android.support.v4.widget.NestedScrollView>-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/content">
+    </FrameLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_dialog_email"
+        android:clickable="true"
+        app:layout_anchorGravity="bottom|right|end"
+        app:layout_anchor="@id/app_bar_layout"/>
 
 </android.support.design.widget.CoordinatorLayout>
