--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,20 @@
     <color name="colorAccent">#d0587b</color>
     <color name="colorAccentTemp">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
+
+    <color name="funny_dark_pink">#d94e6d</color>
+    <color name="soft_red">#ef4c43</color>
+    <color name="seasonal_orange">#ffc73c</color>
+    <color name="dark_seasonal_orange">#efb82e</color>
+    <color name="natural_green">#8bc860</color>
+    <color name="honest_green">#48bd89</color>
+    <color name="dark_honest_green">#3cab7a</color>
+    <color name="sky_light_blue">#79c7dd</color>
+    <color name="supreme_blue">#0e76bd</color>
+
+    <color name="jet_black">#222222</color>
+    <color name="space_gray">#949494</color>
+    <color name="little_light_gray">#f3f3f3</color>
+    <color name="angel_white">#ffffff</color>
+
 </resources>
