--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -9,7 +9,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
         android:fitsSystemWindows="true">
 
@@ -20,59 +20,49 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true">
 
-            <ImageView
-                android:id="@+id/backdrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-
-                app:layout_collapseMode="parallax" />
-            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
-
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 app:layout_collapseMode="pin"
                 android:layout_width="match_parent"
+
                 android:layout_height="?attr/actionBarSize"
                 android:minHeight="?attr/actionBarSize"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-                <!--<LinearLayout-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:orientation="horizontal"-->
-                    <!--android:weightSum="6"-->
-                    <!--android:id="@+id/topLL">-->
+                <autocomplete.InstantAutocomplete
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
-                    <!--<LinearLayout-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="match_parent"-->
-                        <!--android:orientation="horizontal"-->
-                        <!--android:layout_weight="4"/>-->
+                    android:id="@+id/search_box"
 
-                    <!--<LinearLayout-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="match_parent"-->
-                        <!--android:orientation="horizontal"-->
-                        <!--android:layout_weight="2"-->
-                        <!--android:gravity="center|right"-->
-                        <!--android:paddingRight="13dp">-->
+                    android:paddingLeft="25dp"
+                    android:paddingRight="10dp"
+                    android:drawablePadding="8dp"
 
-                        <!--<ImageButton-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:id="@+id/backPressed"-->
-                            <!--android:src="@drawable/ic_menu_send"-->
-                            <!--android:background="#00000000"-->
-                            <!--android:visibility="invisible"-->
-                            <!--android:theme="@style/AppTheme.AppBarOverlay"-->
-                            <!--/>-->
-                    <!--</LinearLayout>-->
+                    android:layout_margin="7dp"
 
-                <!--</LinearLayout>-->
+                    android:gravity="center|center"
+                    android:layout_gravity="center_vertical"
 
-            <!--</android.support.v7.widget.Toolbar>-->
+                    android:dropDownVerticalOffset="5dp"
+                    android:dropDownWidth="wrap_content"
+
+                    android:focusable="false"
+                    android:focusableInTouchMode="true"
+
+                    android:inputType="textAutoComplete|textAutoCorrect"
+
+                    android:popupBackground="@color/angel_white"
+                    android:textColor="@color/little_light_gray"
+
+                    android:background="@drawable/search_background"
+                    android:hint="ค้นหาร้านค้า"
+
+                    android:drawableRight="@drawable/ic_search_black_24dp">
+                </autocomplete.InstantAutocomplete>
+
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -84,15 +74,5 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/content">
     </FrameLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"
-        android:clickable="true"
-        app:layout_anchorGravity="bottom|right|end"
-        app:layout_anchor="@id/app_bar_layout"/>
 
 </android.support.design.widget.CoordinatorLayout>
