--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="dark_honest_green">#3cab7a</color>
     <color name="sky_light_blue">#79c7dd</color>
     <color name="supreme_blue">#0e76bd</color>
+    <color name="dark_blue">#0b5b91</color>
 
     <color name="jet_black">#222222</color>
     <color name="space_gray">#949494</color>
