--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,10 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">200dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">20dp</dimen>
-    <dimen name="activity_vertical_margin_land">20dp</dimen>
+    <dimen name="activity_horizontal_margin">12dp</dimen>
+    <dimen name="activity_vertical_margin">14dp</dimen>
+    <dimen name="activity_vertical_margin_land">14dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="round_padding">7dp</dimen>
 </resources>
