--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -108,7 +108,7 @@
 
                         android:id="@+id/capture"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite"
                         />
                 </LinearLayout>
@@ -179,7 +179,7 @@
                         android:id="@+id/scan"
                         android:layout_weight="2"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
 
@@ -414,7 +414,7 @@
                         android:layout_marginBottom="30dp"
                         android:layout_weight="6"
                         style="?android:attr/borderlessButtonStyle"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
 
@@ -433,7 +433,7 @@
                         android:id="@+id/openPieChartGraphBtn"
                         android:layout_weight="6"
                         style="?android:attr/borderlessButtonStyle"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
 
