--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -33,7 +33,7 @@
             android:textColor="@color/colorWhite"
             android:id="@+id/button"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:background="@drawable/button_state_list_animator"
+            android:background="@drawable/shadow_layer"
             android:layout_gravity="center" />
 
         <LinearLayout
