--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,89 +11,211 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        android:orientation="vertical"
+
         android:fitsSystemWindows="true">
+
+        <!--<android.support.v7.widget.CardView-->
+            <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/angel_white"-->
+            <!--card_view:cardElevation="@dimen/round_padding"-->
+            <!--card_view:cardUseCompatPadding="true">-->
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:fitsSystemWindows="true">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                app:layout_collapseMode="pin"
+            android:background="@color/angel_white"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="top"
+                android:orientation="vertical">
 
-                android:layout_height="?attr/actionBarSize"
-                android:minHeight="?attr/actionBarSize"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                <android.support.v7.widget.Toolbar
+
+                    android:id="@+id/toolbar"
+                    app:layout_collapseMode="pin"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:minHeight="?attr/actionBarSize"
+                    android:layout_marginLeft="-9dp"
+
+                    android:background="@color/supreme_blue"
+
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingRight="@dimen/round_padding"
+                        android:id="@+id/shopSearchBar">
+
+                        <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
+                        <LinearLayout
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
+                            android:layout_width="0px"
+                            android:layout_height="0px"
+                            android:id="@+id/llNrs"
+                            android:orientation="horizontal" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+
+                            android:orientation="vertical"
+
+                            android:gravity="center_vertical"
+
+                            android:id="@+id/statedPart">
+
+                            <Button
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+
+                                android:id="@+id/backPressedState"
+
+                                style="@style/Base.Widget.AppCompat.Button.Borderless"
+
+                                android:background="@drawable/ic_arrow_back_white_24dp" />
+                        </LinearLayout>
+
+                        <autocomplete.InstantAutocomplete
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+
+                            android:id="@+id/search_box"
+
+                            android:paddingLeft="25dp"
+                            android:paddingRight="10dp"
+                            android:drawablePadding="8dp"
+
+                            android:layout_marginTop="@dimen/round_padding"
+                            android:layout_marginBottom="@dimen/round_padding"
+                            android:layout_marginStart="52dp"
+
+                            android:gravity="center|center"
+                            android:layout_gravity="center_vertical"
+
+                            android:dropDownVerticalOffset="0dp"
+                            android:dropDownWidth="match_parent"
+
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
+                            android:nextFocusUp="@+id/search_box"
+                            android:nextFocusLeft="@+id/search_box"
+
+                            android:inputType="textAutoComplete|textAutoCorrect"
+
+                            android:popupBackground="@color/angel_white"
+                            android:textColor="@color/little_light_gray"
+
+                            android:background="@drawable/search_background"
+                            android:hint="ค้นหาร้านค้า"
+
+                            android:drawableRight="@drawable/ic_search_black_24dp">
+                        </autocomplete.InstantAutocomplete>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+
+                            android:orientation="horizontal"
+
+                            android:id="@+id/option_bar">
+
+                            <!--<TextView-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="match_parent"-->
+
+                                <!--android:id="@+id/menuNaming"-->
+
+                                <!--android:text="@string/app_name"-->
+
+                                <!--android:textSize="@dimen/font_app_name"-->
+                                <!--android:textColor="@color/angel_white"-->
+
+                                <!--android:gravity="center|left"-->
+
+                                <!--android:layout_alignParentStart="true"/>-->
+
+
+                            <!--<LinearLayout-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="match_parent"-->
+                                <!--android:orientation="horizontal"-->
+
+                                <!--android:gravity="center"-->
+
+                                <!--android:layout_alignParentEnd="true">-->
+
+                                    <!--<Button-->
+                                        <!--android:layout_marginTop="2dp"-->
+
+                                        <!--android:layout_width="36dp"-->
+                                        <!--android:layout_height="36dp"-->
+                                        <!--android:background="@drawable/round_search_42dp"-->
+                                        <!--style="@style/Base.Widget.AppCompat.Button.Borderless"-->
+
+                                        <!--android:id="@+id/shop_icon_id"-->
+
+                                        <!--android:layout_marginEnd="10dp"/>-->
+
+                                    <!--<LinearLayout-->
+                                        <!--android:layout_width="match_parent"-->
+                                        <!--android:layout_height="wrap_content"-->
+                                        <!--android:orientation="horizontal"-->
+
+                                        <!--android:id="@+id/app_bar_part_additional"-->
+
+                                        <!--android:visibility="gone">-->
+
+                                        <!--<View-->
+                                            <!--android:layout_width="1dp"-->
+                                            <!--android:layout_height="match_parent"-->
+                                            <!--android:background="@color/angel_white"-->
+
+                                            <!--android:layout_marginEnd="10dp"/>-->
+
+                                        <!--<Button-->
+                                            <!--android:layout_marginTop="2dp"-->
+
+                                            <!--android:layout_width="36dp"-->
+                                            <!--android:layout_height="36dp"-->
+                                            <!--android:background="@drawable/round_description_42dp"-->
+                                            <!--style="@style/Base.Widget.AppCompat.Button.Borderless"-->
+
+                                            <!--android:id="@+id/report_icon_id" />-->
+                                    <!--</LinearLayout>-->
+
+                            <!--</LinearLayout>-->
+                        </RelativeLayout>
+
+                    </RelativeLayout>
+
+                </android.support.v7.widget.Toolbar>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_horizontal">
+                    android:layout_height="wrap_content">
 
-                    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
-                    <LinearLayout
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:layout_width="0px"
-                        android:layout_height="0px"
-                        android:id="@+id/llNrs"
-                        android:orientation="horizontal" />
-
-                    <autocomplete.InstantAutocomplete
+                    <View
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-
-                        android:id="@+id/search_box"
-
-                        android:paddingLeft="25dp"
-                        android:paddingRight="10dp"
-                        android:drawablePadding="8dp"
-
-                        android:layout_marginTop="@dimen/round_padding"
-                        android:layout_marginBottom="@dimen/round_padding"
-                        android:layout_marginLeft="@dimen/round_padding"
-                        android:layout_marginRight="14dp"
-
-                        android:gravity="center|center"
-                        android:layout_gravity="center_vertical"
-
-                        android:dropDownVerticalOffset="0dp"
-                        android:dropDownWidth="match_parent"
-
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:nextFocusUp="@+id/search_box"
-                        android:nextFocusLeft="@+id/search_box"
-
-                        android:inputType="textAutoComplete|textAutoCorrect"
-
-                        android:popupBackground="@color/angel_white"
-                        android:textColor="@color/little_light_gray"
-
-                        android:background="@drawable/search_background"
-                        android:hint="ค้นหาร้านค้า"
-
-                        android:drawableRight="@drawable/ic_search_black_24dp">
-                    </autocomplete.InstantAutocomplete>
-
-                    <!--<ProgressBar-->
-                        <!--style="?android:attr/progressBarStyleSmallTitle"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_alignTop="@id/search_box"-->
-                        <!--android:layout_alignBottom="@id/search_box"-->
-                        <!--android:layout_alignLeft="@id/search_box"/>-->
-
-                    <!--android:focusable="false"-->
-                    <!--android:focusableInTouchMode="true"-->
+                        android:layout_height="3dp"
+                        android:background="@drawable/shadow_layer"/>
 
                 </RelativeLayout>
 
-            </android.support.v7.widget.Toolbar>
+            </LinearLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -102,7 +225,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
+        android:layout_marginBottom="?attr/actionBarSize"
+
         android:id="@+id/content">
     </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
+
+
