--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -102,7 +102,7 @@
 
                         android:id="@+id/capture"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite"
                         />
                 </LinearLayout>
@@ -173,7 +173,7 @@
                         android:id="@+id/scan"
                         android:layout_weight="2"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
 
@@ -408,7 +408,7 @@
                         android:layout_marginBottom="30dp"
                         android:layout_weight="6"
                         style="?android:attr/borderlessButtonStyle"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
 
@@ -427,7 +427,7 @@
                         android:id="@+id/openPieChartGraphBtn"
                         android:layout_weight="6"
                         style="?android:attr/borderlessButtonStyle"
-                        android:background="@drawable/button_state_list_animator"
+                        android:background="@drawable/shadow_layer"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
 
