--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,11 @@
     <dimen name="activity_vertical_margin_land">14dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="font_app_name">18sp</dimen>
+
+
+    <dimen name="slice_align">4dp</dimen>
     <dimen name="round_padding">7dp</dimen>
     <dimen name="title_expanded">13dp</dimen>
+    <dimen name="double_round">14dp</dimen>
 </resources>
