--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
 
     <color name="funny_dark_pink">#d94e6d</color>
     <color name="soft_red">#ef4c43</color>
+    <color name="deepest_orange">#ff5820</color>
     <color name="seasonal_orange">#ffc73c</color>
     <color name="syrup_yellow">#FDCA6F</color>
     <color name="dark_seasonal_orange">#efb82e</color>
