--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="angel_white">#ffffff</color>
 
 
+    <color name="fortune_green">#a4bb95</color>
     <color name="rising_green">#249780</color>
     <color name="stone_gray">#2E3846</color>
     <color name="shadow_white">#EFE6F1</color>
