--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,9 @@
 
     <dimen name="slice_align">4dp</dimen>
     <dimen name="round_padding">7dp</dimen>
+
+    <dimen name="pagination_line">9dp</dimen>
+
     <dimen name="title_expanded">13dp</dimen>
     <dimen name="double_round">14dp</dimen>
     <dimen name="gate_margin">42dp</dimen>
